настроена секьюрити
